# mandelbrot

./: .gitignore  CMakeLists.txt  c.sh  imageutilities.h  main.cpp  mandel45.json  mandel92.json  mandelbrot.h  parameters.json
Parameters/: mandel45.json  mandel92.json  parameters.json
